fixed bug 59470 -- failed to handle multipart/alternative message; r=rhp, sr=mscott